jilles      2006/06/09 18:35:06 UTC	(20060609-5354)
  Log:
  If we send a wallops because the log file could not
  be opened, first set the variable so we don't
  immediately wallops again and then do the wallops.
  wallops() could try to log in certain cases.
  

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2006/06/09 16:38:48 UTC	(20060609-5352)
  Log:
  All protocol modules: allow PART with multiple channels separated by commas.
  Not all ircds actually send these but this keeps the m_part functions
  the same everywhere.
  

  Changes:	Modified:
  +12 -2	trunk/protocol/asuka.c (File Modified) 
  +12 -2	trunk/protocol/bahamut.c (File Modified) 
  +12 -2	trunk/protocol/bircd.c (File Modified) 
  +12 -2	trunk/protocol/charybdis.c (File Modified) 
  +12 -2	trunk/protocol/dreamforge.c (File Modified) 
  +12 -2	trunk/protocol/hybrid.c (File Modified) 
  +12 -2	trunk/protocol/hyperion.c (File Modified) 
  +12 -2	trunk/protocol/inspircd.c (File Modified) 
  +12 -2	trunk/protocol/ircnet.c (File Modified) 
  +12 -2	trunk/protocol/monkey.c (File Modified) 
  +12 -2	trunk/protocol/nefarious.c (File Modified) 
  +12 -2	trunk/protocol/plexus.c (File Modified) 
  +12 -2	trunk/protocol/ptlink.c (File Modified) 
  +12 -2	trunk/protocol/ratbox.c (File Modified) 
  +12 -2	trunk/protocol/shadowircd.c (File Modified) 
  +12 -2	trunk/protocol/solidircd.c (File Modified) 
  +12 -2	trunk/protocol/sorcery.c (File Modified) 
  +12 -2	trunk/protocol/ultimate3.c (File Modified) 
  +12 -2	trunk/protocol/undernet.c (File Modified) 
  +12 -2	trunk/protocol/unreal.c (File Modified) 


gxti        2006/06/09 03:36:14 UTC	(20060609-5350)
  Log:
  Add saslserv/dh-blowfish.so to example config (commented out).
  

  Changes:	Modified:
  +1 -0		trunk/dist/example.conf (File Modified) 


jilles      2006/06/04 18:58:21 UTC	(20060604-5348)
  Log:
  Make disabling sasl in ./setup work.
  

  Changes:	Modified:
  +3 -0		trunk/setup (File Modified) 

