@@ -7,7 +7,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.userserv.conf 5267 2006-05-16 11:10:44Z jilles $
+ * $Id: example.userserv.conf 5358 2006-06-11 15:07:07Z jilles $
  */
 
 /* Protocol module.
@@ -516,6 +516,15 @@ chanserv {
 	hop = "+vVhHtA";
 	aop = "+vhoOtriA";
 	sop = "+vhoOtrsifA";
+
+	/* changets
+	 * Change the channel TS when someone recreates a registered
+	 * channel, ensuring that they are deopped when it is necessary,
+	 * and not deopped when it is not.
+	 * Not all protocol modules support this.
+	 * Note: this is a work in progress.
+	 */
+	#changets;
 };
 
 /* The global {} block defines settings concerning the global noticer. */
