@@ -1,3 +1,15 @@
+jilles      2006/06/11 14:09:04 UTC	(20060611-5356)
+  Log:
+  Enhance TS support to ignore modes with a younger TS.
+  This will allow us to lower a channel's TS.
+  We do not mark users as deopped (drop modes from them)
+  so this will not work 100% with TS5.
+  
+
+  Changes:	Modified:
+  +54 -9	trunk/protocol/charybdis.c (File Modified) 
+
+
 jilles      2006/06/09 18:35:06 UTC	(20060609-5354)
   Log:
   If we send a wallops because the log file could not
